need assistance straight to contact page and teal corner for side ad

--- a/app/design/frontend/default/rooja/template/rewardsref/customer/referral.phtml
+++ b/app/design/frontend/default/rooja/template/rewardsref/customer/referral.phtml
@@ -1,5 +1,5 @@
 <div class="right" id="help">
-	<a href="#" class="needAssistance fr" title="Need Assitance? Talk to a live rep"><img src="<?php echo $this->getSkinUrl('images/icons/question-mark.png'); ?>" alt="Question mark icon"> Need Assistance</a>
+	<a href="/contacts" class="needAssistance2 fr" title="Need Assitance? Talk to a live rep"><img src="<?php echo $this->getSkinUrl('images/icons/question-mark.png'); ?>" alt="Question mark icon"> Need Assistance</a>
 	</div>
 
 <div class="referrals">
