--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -573,7 +573,7 @@ h3 .product-name {
 .sideAd{
     background:url(../images/bgs/teal-corner.png) no-repeat top left #a3bcbf;
     padding:15px 10px;
-    /*margin-top:5px;*/
+    margin-top:3px;
 }
 .sideAd p{font-weight:bold;color:#fff;margin:0;background:url(../images/icons/rupee-icon.png) no-repeat left center;padding-left:28px;}
 
