add careers to footer

--- a/app/design/frontend/default/rooja/template/page/html/footer.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/footer.phtml
@@ -43,6 +43,7 @@
 			<li><a href="/faq">FAQ</a></li>
 			<li><a href="/press">Press</a></li>
 			<li><a href="/contacts">Contact</a></li>
+			<li><a href="https://roojacareers.resumetracker.com/public">Careers</a></li>
 		</ul>
 		</section>
 		
