--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -186,7 +186,7 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 					<?php if (!$fbprice == null) { ?>
 					<?php echo 'Rs. ' . number_format($fbprice,2); } else { ?>
 					<?php $fbprice = number_format($_product->getSpecialprice(), 2);echo 'Rs. ' . $fbprice; } ?></span></p>
-					<a href="#" onclick="window.open('/size-chart', 'a', 'width=500, height=400, scrollbars=0, resizable=0')" class="sizeChart fr">Size Chart</a>
+					<a href="#" class="sizeChart fr">Size Chart</a>
 
 					<br class="clear">
 
