--- a/app/design/frontend/default/rooja/template/rewardsref/customer/referral.phtml
+++ b/app/design/frontend/default/rooja/template/rewardsref/customer/referral.phtml
@@ -7,6 +7,7 @@
         <h1>Invite a Friend</h1>
 
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
+<?php echo $this->getChildHtml('progress_bar'); ?>
 
 <div class="half-col right"><?php echo $this->getChildHtml('affiliate'); ?></div>
 <?php echo $this->getChildHtml('refer_form'); ?>
