--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -36,7 +36,7 @@
     <?php $_cartQty = $this->getSummaryCount() ?>
 	<div class="hiw-container" id="topCart">
 		<div class="howitworks">
-			<p class="hiw-header">My Bag</p>
+		
     <div class="block-content">
     <?php if ($_cartQty>0): ?>
         
@@ -62,7 +62,7 @@
         <p class="miniCartSubtotal">Cart Subtotal</p> <span class="miniCartSubtotalPrice"><?php echo Mage::helper('checkout')->formatPrice($this->getSubtotal()) ?></span>
         <?php if ($_subtotalInclTax = $this->getSubtotalInclTax()): ?>
             <br />(<?php echo Mage::helper('checkout')->formatPrice($_subtotalInclTax) ?> <?php echo Mage::helper('tax')->getIncExcText(true) ?>)
-        <?php endif; ?><br /><br />
+        <?php endif; ?><a href="/">Continue Shopping</a><br /><br />
 <a href="/checkout/cart" id="checkoutBtn">Proceed to Checkout</a>
     </div>
 <div class="clear"></div>
