--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -326,6 +326,7 @@ width: 450px;
 overflow: hidden;
 padding: 30px 0 0 0;}
 
+#topCart .continueShoppingLink{color:#fff;}
 #checkoutBtn{
     float:right; height:46px;line-height:46px; background:#cc6600; width:181px; font-size:1.4em; text-align:center; color:#fff;
 }
