--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar/default.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar/default.phtml
@@ -44,7 +44,7 @@
 			        <?php endif ?>
 			    
 				</td>
-				<td width="200px">
+				<td width="300px">
 				<?php if ($this->helper('tax')->displayCartPriceExclTax() || $this->helper('tax')->displayCartBothPrices()): ?>
 			        <?php if ($this->helper('tax')->displayCartBothPrices()): ?>
 			            <?php echo $this->__('Excl. Tax'); ?>:
@@ -56,7 +56,7 @@
 			        <?php endif; ?>				
 			</td>
 			<td>
-				   <a href="<?php echo $this->getDeleteUrl() ?>" title="<?php echo $this->__('Remove This Item') ?>" onclick="return confirm('<?php echo $this->__('Are you sure you would like to remove this item from the shopping cart?') ?>');">Remove</a>
+				   <a href="<?php echo $this->getDeleteUrl() ?>" title="<?php echo $this->__('Remove This Item') ?>" onclick="return confirm('<?php echo $this->__('Are you sure you would like to remove this item from the shopping cart?') ?>');" class="remove-item">Remove</a>
 			</td>
 			</tr>
 		</table>
