--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -336,6 +336,7 @@ padding: 30px 0 0 0;}
 #checkoutBtn{
     float:right; height:46px;line-height:46px; background:#cc6600; width:181px; font-size:1.4em; text-align:center; color:#fff;display:block;
 }
+.remove-item{color:#fff;text-align:right;}
 
 
 /*************** CONTACT FORM */
