--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -80,6 +80,10 @@
            </td>
         </tr>
     </table>
+<h3>	Shopping on Rooja is 100% Secure and Convenient</h3>
+
+	To ensure the best possible customer experience Rooja.com is committed is committed to the highest level of customer data security. We strive for the strongest industry-accepted security practices in order to protect the security of our most important asset - our customers. Rooja.com brings you multiple secure payment options like Credit Cards, ATM/ Debit Cards, Net Banking and Cash on Delivery.
+
     
     </ol>
     </form>
