--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -20,7 +20,7 @@
 
 	<h1>	Shopping on Rooja is 100% Secure and Convenient</h1>
 
-		<p>To ensure the best possible customer experience Rooja.com is committed is committed to the highest level of customer data security. We strive for the strongest industry-accepted security practices in order to protect the security of our most important asset - our customers. Rooja.com brings you multiple secure payment options like Credit Cards, ATM/ Debit Cards, Net Banking and Cash on Delivery.</p>
+		<p style="padding: 0 0 20px 0;">To ensure the best possible customer experience Rooja.com is committed is committed to the highest level of customer data security. We strive for the strongest industry-accepted security practices in order to protect the security of our most important asset - our customers. Rooja.com brings you multiple secure payment options like Credit Cards, ATM/ Debit Cards, Net Banking and Cash on Delivery.</p>
 
 
 
