--- a/app/design/frontend/default/rooja/template/catalog/product/list/upsell.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/list/upsell.phtml
@@ -32,16 +32,16 @@
         <?php for($_j=0;$_j<$this->getColumnCount();$_j++): ?>
             <?php if($_link=$this->getIterableItem()): ?>
             <li>
-<a href="<?php echo $_link->getProductUrl() ?>" title="<?php echo $this->htmlEscape($_link->getName()) ?>"><img src="<?php echo $this->helper('catalog/image')->init($_link, 'small_image')->resize(114)->keepFrame(false) ?>" width="114"  alt="<?php echo $this->htmlEscape($_link->getName()) ?>"> <span class="numLikes"><img src="<?php echo $this->getSkinUrl('images/icons/thumbs-up.png'); ?>" alt="Thumbs Up icon"> <?php list($categoryId,) = $_link->getCategoryIds();
+<a href="<?php echo $_link->getProductUrl() ?>" title="<?php echo $this->htmlEscape($_link->getName()) ?>"><img src="<?php echo $this->helper('catalog/image')->init($_link, 'small_image')->resize(114)->keepFrame(false) ?>" width="114"  alt="<?php echo $this->htmlEscape($_link->getName()) ?>"> <!--<span class="numLikes"><img src="<?php echo $this->getSkinUrl('images/icons/thumbs-up.png'); ?>" alt="Thumbs Up icon"> <?php list($categoryId,) = $_link->getCategoryIds();
 			$source_url = $_link->setCategoryId($categoryId)->getProductUrl();
 //$source_url = $_link->getProductUrl();
 $url = "http://api.facebook.com/restserver.php?method=links.getStats&urls=".urlencode($source_url);
 $xml = file_get_contents($url);
 $xml = simplexml_load_string($xml);
-//print_r($xml);
+print_r($xml);
 echo $likes = $xml->link_stat->like_count;
 ?>
-</span></a>
+</span>--></a>
             </li>
             <?php else: ?>
             <li class="empty">&nbsp;</li>
