contact page changes

--- a/app/design/frontend/base/default/template/contacts/form.phtml
+++ b/app/design/frontend/base/default/template/contacts/form.phtml
@@ -27,29 +27,24 @@
 
 <section id="contact-wrapper">
 	<section id="contact-text" class="left">
-		<h3>Rooja's Promise</h3>
-		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec.
-		</p>
+		<h3>We love to hear from Rooja.com members.</h3> 
 		
-		<h3>Shipping and Delivery</h3>
-		<p>
-			Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec.
-		</p>
-		<ul>
-			<li>
-				<a href=""><img src="/skin/frontend/default/rooja/images/icons/twitter-purple.png" alt="Twitter icon">Follow us on Twitter</a>
-			</li>
-			<li>
-				<a href=""><img src="/skin/frontend/default/rooja/images/icons/facebook-purple.png" alt="Twitter icon">Find us on Facebook</a>
-			</li>
+		<p>Call Us at +91-11-45673347 (We are open all days 10am-7pm) or Email Us at support@rooja.in.</p>
+		
+		<h3>Here are some simple ways to get in touch with us:</h3>
+		<p>Got a questions about an Order? Contact our team by Phone or Email.</p>
+		
+		<h3>Just want to pass along some site feedback, suggestions, bugs which we couldn’t catch?</h3>
+		<p>Post some feedback on our User Voice Forum</p>
+	
+		<h3>Want to socialize with us?</h3>
+		<p>Tweet to us @RoojaFashion or post a message on out Facebook Wall.</p>
+
+		<h3>We also welcome regular mail</h3>
+		<p>C-169 Naraina Industrial Area,Phase-1, New Delhi-110028, India</p>
+		
 	</section>
 	<section id="contact-form" class="right">
-		<h3>Toll Free Phone</h3>
-		<p>+1 866 874 8327</p>
-		<h3>SMS</h3>
-		<p>+1 800 983 8247</p>
-		<h3>Email</h3>
-		<p>Questions, comments, concerns?</p>	
 		
 		<form action="<?php echo $this->getFormAction(); ?>" id="contactForm" method="post">
 		    <div class="fieldset">
@@ -85,6 +80,8 @@
 		
 	</section>
 	</section>
+
+	
 
 </form>
 <script type="text/javascript">
