contact page changes

--- a/app/design/frontend/base/default/template/contacts/form.phtml
+++ b/app/design/frontend/base/default/template/contacts/form.phtml
@@ -44,7 +44,7 @@
 	<section id="contact-form" class="right">
 	
 			<h3>Want to socialize with us?</h3>
-			<p>Tweet to us <a href="http://www.twitter.com/roojafashion">@RoojaFashion or post a message on out <a href="http://facebook.com/roojafashion"Facebook Wall</a>.</p>
+			<p>Tweet to us <a href="http://www.twitter.com/roojafashion">@RoojaFashion</a> or post a message on our <a href="http://facebook.com/roojafashion">Facebook Wall</a>.</p>
 	
 		
 		<form action="<?php echo $this->getFormAction(); ?>" id="contactForm" method="post">
