upsell quick tweak

--- a/app/design/frontend/default/rooja/template/catalog/product/list/upsell.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/list/upsell.phtml
@@ -34,6 +34,7 @@
             <li>
 	<?php
 	 list($categoryId,) = $_link->getCategoryIds();
+	print_r($categoryId);
 				$source_url = $_link->setCategoryId($categoryId)->getProductUrl();
 				echo $source_url;
 	//$source_url = $_link->getProductUrl();
