--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -493,6 +493,10 @@ a.closer {
 	margin-left: 50%;}
 
 
+#checkout-payment-method-load p {
+	font-size:0.9em;
+}
+
 /* TWO COL DEFAULT */
 .2col {}
 .staticContent{margin:30px 0 30px;overflow:hidden;}
