--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -87,7 +87,7 @@
 <nav id="navLinks">
 	<div class="navCont">
 	<ul>
-		<li><a href="about.html">About</a></li>
+		<li><a href="#aboutWrapper">About</a></li>
 		<li><a href="http://blog.rooja.com">Blog</a></li>
 	</ul>
 	
