upsell quick tweak

--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -37,7 +37,6 @@
 <meta property="og:description" content="Rooja brings you carefully selected fashion products from internationally renowned designers and brands at discounts upto 60%. Best of all: Membership is free. ;)."/>
 <meta property="og:image" content="http://rooja.com/_images/rooja-logo-fb.png"/>
 <link type="text/css" href="/css/jquery.fancybox-1.3.4.css" rel="stylesheet" media="all" />
-<script type="text/javascript" src="/js/jquery.fancybox-1.3.4.pack.js"></script>
 <script type="text/javascript">
   var _kmq = _kmq || [];
   function _kms(u){
@@ -81,7 +80,7 @@
 							type: 'random_start',
 							containerheight: '19px'
 						});
-			$("a.fancyboxLink").fancybox({
+			jQuery("a.fancyboxLink").fancybox({
 					'autoScale'         : true,
 					'titleShow'		: false,
 					'type'              : 'inline'
