remove CCA note on checkout

--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/review/button.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/review/button.phtml
@@ -24,5 +24,5 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<img src="/skin/frontend/default/rooja/images/ccave_note.png" />
+<!--<img src="/skin/frontend/default/rooja/images/ccave_note.png" /> -->
 <button type="submit" title="<?php echo $this->__('Place Order') ?>" class="button btn-checkout" onclick="review.save();"><span><span><?php echo $this->__('Place Order') ?></span></span></button>
