upsell quick tweak

--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -83,6 +83,7 @@
 			jQuery("a.fancyboxLink").fancybox({
 					'autoScale'         : true,
 					'titleShow'		: false,
+					'overlayColor'		: '#111',
 					'type'              : 'inline'
 			});
 	       });
