upsell quick tweak

--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -106,11 +106,11 @@
 		</header><!--End Header-->
 		<section id="content" class="body">
 			<h2 id="howItWorks" class="tr">How it Works</h2>
-			<img src="_images/icons/man.png" alt="Join icon" class="fl hiwIcon"><p class="hiwText"><strong>Join:</strong> <a href="index.html">Apply to become a Rooja member</a> for access to our Invitation-only sales, exclusive events and giveaways.</p>
+			<img src="/images/splash/icons/man.png" alt="Join icon" class="fl hiwIcon"><p class="hiwText"><strong>Join:</strong> <a href="index.html">Apply to become a Rooja member</a> for access to our Invitation-only sales, exclusive events and giveaways.</p>
 
-			<img src="_images/icons/tag.png" alt="Tag icon" class="fl hiwIcon"><p class="hiwText"><strong>Shop:</strong> Events held on Rooja are for members only and last typically between 2 to 3 days. Each event is held only for the stated period - once ended, it is gone for good.</p>
+			<img src="/images/splash/images/icons/tag.png" alt="Tag icon" class="fl hiwIcon"><p class="hiwText"><strong>Shop:</strong> Events held on Rooja are for members only and last typically between 2 to 3 days. Each event is held only for the stated period - once ended, it is gone for good.</p>
 
-			<img src="_images/icons/heart.png" alt="Spread the love icon" class="fl hiwIcon"><p class="hiwText"><strong>Spread The Love:</strong> Invite your best friends and only those you want in our community. You decide who gets access to Rooja. Invite a friend and get shopping credits when your friend joins and makes their first purchase.</p>
+			<img src="/images/splash/images/icons/heart.png" alt="Spread the love icon" class="fl hiwIcon"><p class="hiwText"><strong>Spread The Love:</strong> Invite your best friends and only those you want in our community. You decide who gets access to Rooja. Invite a friend and get shopping credits when your friend joins and makes their first purchase.</p>
 
 			<div class="divider clear"></div>
 
