privacy, security, authenticity pages added

--- a/app/design/frontend/default/rooja/template/page/html/footer.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/footer.phtml
@@ -30,6 +30,9 @@
 		<section class="col1 fl">
 		<h4>Policies</h4>
 		<ul>
+			<li><a href="/privacy">Privacy Policy</a></li>
+			<li><a href="/security">Security</a></li>
+			<li><a href="/authenticity ">Authenticity</a></li>
 			<li><a href="/shipping-policy">Shipping Policy</a></li>
 			<li><a href="/returns-and-exchanges">Returns and Exchanges</a></li>
 			<li><a href="/terms-and-conditions">Terms and Conditions</a></li>
