upsell quick tweak

--- a/skin/frontend/default/rooja/css/login.css
+++ b/skin/frontend/default/rooja/css/login.css
@@ -205,7 +205,7 @@ h1#about{
 }
 #howItWorks{
     background-image:url(../images/splash/how-it-works.png);
-    width:200;height:19px;
+    width:200px;height:19px;
     margin:18px 0;
 }
 
