--- a/skin/frontend/default/rooja/css/jquery.fancybox-1.3.4.css
+++ b/skin/frontend/default/rooja/css/jquery.fancybox-1.3.4.css
@@ -79,7 +79,7 @@
 	height: 0;
 	padding: 0;
 	outline: none;
-	position: relative;
+	position: absolute;
 	overflow: hidden;
 	z-index: 1102;
 	border: 0px solid #111;
