--- a/skin/frontend/default/rooja/css/jquery.fancybox-1.3.4.css
+++ b/skin/frontend/default/rooja/css/jquery.fancybox-1.3.4.css
@@ -79,10 +79,11 @@
 	height: 0;
 	padding: 0;
 	outline: none;
-	position: absolute;
+	position: relative;
 	overflow: hidden;
 	z-index: 1102;
 	border: 0px solid #111;
+	margin-bottom:35px;
 }
 
 #fancybox-hide-sel-frame {
