add Need Assistance to checkout

--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -16,7 +16,11 @@
 </div>
  
  <span id="shipping:same_as_billing"></span>
+
 <div id="one-check" style="width:980px;">
+	<div class="right" id="help"> 
+		<a href="#" class="needAssistance fr" title="Need Assitance? Talk to a live rep"><img src="http://rooja.actsofphilosophie.com/skin/frontend/default/rooja/images/icons/question-mark.png" alt="Question mark icon"> Need Assistance</a> 
+		</div>
 
 	<h1>	Shopping on Rooja is 100% Secure and Convenient</h1>
 
