--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -22,7 +22,7 @@
 		<a href="#" class="needAssistance fr" title="Need Assitance? Talk to a live rep"><img src="http://rooja.actsofphilosophie.com/skin/frontend/default/rooja/images/icons/question-mark.png" alt="Question mark icon"> Need Assistance</a> 
 		</div>
 
-	<h1>	Shopping on Rooja is 100% Secure and Convenient</h1>
+	<h1 id="checkout">Shopping on Rooja is 100% Secure and Convenient</h1>
 
 		<p style="padding: 0 0 20px 0;">To ensure the best possible customer experience Rooja.com is committed is committed to the highest level of customer data security. We strive for the strongest industry-accepted security practices in order to protect the security of our most important asset - our customers. Rooja.com brings you multiple secure payment options like Credit Cards, ATM/ Debit Cards, Net Banking and Cash on Delivery.</p>
 
