--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -680,7 +680,10 @@ a {text-decoration:none; color:#000;}
 a:hover {color: ;}
 a.selected{color:;}
 h1 {font-size: 2.5em; color: #431f4c; margin-bottom: 10px; font-weight:normal;font-family:"ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;line-height:.9em;}
+h1#checkout {margin-top:40px;}
+
 h2 {font-size: 2.4em;line-height:1em;font-family:"ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;font-weight:normal;}
+
 h3 {font-size: 2.4em; color: #431f4c; line-height:18px; margin-bottom: 15px; font-weight:normal;font-family:"ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;}
 .step h3 {font-family:helvetica, arial, sans-serif; font-size:15px; font-weight: bold; margin: 13px 0 5px 0;}
 h4{font-size:1.6em;font-family:"ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;font-weight:normal;line-height:1.2em; text-transform:uppercase; padding:5px 0 20px 0;}
