--- a/app/design/frontend/base/default/template/customer/widget/name.phtml
+++ b/app/design/frontend/base/default/template/customer/widget/name.phtml
@@ -25,22 +25,22 @@
  */
 
 /**
-USAGE:
-
-Simple:
-
-<?php echo $this->getLayout()->createBlock('customer/widget_name')
-   ->setObject($this->getAddress())
-   ->toHtml() ?>
-
-For checkout/onepage/shipping.phtml:
-
-<?php echo $this->getLayout()->createBlock('customer/widget_name')
-   ->setObject($this->getAddress())
-   ->setFieldIdFormat('shipping:%s')
-   ->setFieldNameFormat('shipping[%s]')
-   ->setFieldParams('onchange="shipping.setSameAsBilling(false);"')
-   ->toHtml() ?>
+*USAGE:
+*
+*Simple:
+*
+* <?php echo $this->getLayout()->createBlock('customer/widget_name')
+*    ->setObject($this->getAddress())
+*    ->toHtml() ?>
+* 
+* For checkout/onepage/shipping.phtml:
+* 
+* <?php echo $this->getLayout()->createBlock('customer/widget_name')
+*    ->setObject($this->getAddress())
+*    ->setFieldIdFormat('shipping:%s')
+*    ->setFieldNameFormat('shipping[%s]')
+*    ->setFieldParams('onchange="shipping.setSameAsBilling(false);"')
+*    ->toHtml() ?>
 */
 /**
  * @var Mage_Customer_Block_Widget_Name $this
@@ -64,7 +64,7 @@ For checkout/onepage/shipping.phtml:
     </div>
 <?php endif; ?>
     <div class="field name-firstname">
-        <label for="<?php echo $this->getFieldId('firstname')?>" class="required"><?php echo $this->__('First Name') ?>*</label>
+        <label for="<?php echo $this->getFieldId('firstname')?>" class="required"><?php echo $this->__('First Name') ?><em>*</em></label>
         <div class="input-box">
             <input type="text" id="<?php echo $this->getFieldId('firstname')?>" name="<?php echo $this->getFieldName('firstname')?>" value="<?php echo $this->htmlEscape($this->getObject()->getFirstname()) ?>" title="<?php echo $this->__('First Name') ?>" class="input-text required-entry" <?php echo $this->getFieldParams() ?> />
         </div>
@@ -78,7 +78,7 @@ For checkout/onepage/shipping.phtml:
     </div><!--
 --><?php endif; ?><!--
     --><div class="field name-lastname">
-        <label for="<?php echo $this->getFieldId('lastname')?>" class="required"><?php echo $this->__('Last Name') ?>*</label>
+        <label for="<?php echo $this->getFieldId('lastname')?>" class="required"><?php echo $this->__('Last Name') ?><em>*</em></label>
         <div class="input-box">
             <input type="text" id="<?php echo $this->getFieldId('lastname')?>" name="<?php echo $this->getFieldName('lastname')?>" value="<?php echo $this->htmlEscape($this->getObject()->getLastname()) ?>" title="<?php echo $this->__('Last Name') ?>" class="input-text required-entry" <?php echo $this->getFieldParams() ?> />
         </div>
